MOBI-82 - avoid button group wrapping
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@35220 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_button.css
+++ b/resources/themes/base/1_button.css
@@ -30,7 +30,7 @@
 }
 .mobi-button-group-hor .mobi-button {
     display: inline-block;
-    margin: 0 0 0 -1px;
+    margin: 0 0 0 -3px;
 }
 .mobi-button {
     border-width: 1px;
